<resources>
    <string name="app_name">Streamline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">离线</string>
    <string name="nav_header_subtitle">Star</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_star">Star</string>

    <string name="nav_header_login">现在登录</string>
    <string name="nav_header_logged">已登录</string>
    <string name="menu_others">Others</string>
    <string name="menu_about">关于</string>
    <string name="menu_setting">设置</string>
    <string name="menu_history">浏览记录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">欢迎！</string>
    <string name="invalid_username">账户须是有效邮箱地址</string>
    <string name="invalid_password">密码须在6到15位之间</string>
    <string name="login_failed">登录失败</string>
    <string name="register">没有账号？点击注册</string>
    <!-- Strings related to register -->
    <string name="action_register">注册</string>
    <string name="nickname">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_success">注册成功！</string>
    <string name="invalid_nickname">密码须在1到25位之间</string>
    <string name="mismatched_password">两次密码须一致</string>

</resources>
