<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />

    <item android:title="@string/menu_others">
        <menu>
            <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_setting"
                    android:title="@string/menu_setting" />
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
