<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallowBlue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <androidx.cardview.widget.CardView
            android:layout_width="@dimen/nav_header_avatar_width"
            android:layout_height="@dimen/nav_header_avatar_width"
            app:cardCornerRadius="999dp"
            app:cardElevation="0dp">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_avatar" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/nav_header_vertical_spacing">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white" />

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_subtitle"
                    android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/nav_header_login_button_start_margin"
                android:background="@drawable/bg_nav_login_button"
                android:minHeight="0dp"
                android:text="@string/nav_header_login"
                android:textColor="@android:color/white"
                android:foreground="@drawable/ripple_effect"/>
    </LinearLayout>

</LinearLayout>
